tests/ui/consts/const-mut-refs/issue-76510.stderr
error[E0764]: mutable borrows of lifetime-extended temporaries in the top-level scope of a constant are not allowed
  --> $DIR/issue-76510.rs:3:29
   |
LL | const S: &'static mut str = &mut " hello ";
   |                             ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0764`.
